<resources>
    <string name="app_name">WorkingWithStorage</string>
    <string name="birthday">Birthday</string>
    <string name="city">City</string>
    <string name="name">Name</string>
    <string name="addButtonText">Add</string>
    <string name="dateFormatHelper">DD.MM.YYYY</string>
    <string name="sortByPrefKey">sortByPreference</string>
    <string name="isDescSortPrefKey">descendingCheckBox</string>
    <string name="ErrorText">Error</string>
    <string name="AddItemActivityTitle">Add friend</string>
    <string name="FriendsMainActivityTitle">Friends</string>
    <string name="DeletingMessage">Delete this friend?</string>
    <string name="ConfirmButtonText">Yes</string>
    <string name="SortMenuTitle">sort</string>
</resources>