<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_et_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@+id/city_et_wrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/city_et_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@+id/dob_et_wrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_et_wrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/city_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dob_et_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/birthday"
        app:endIconMode="clear_text"
        app:helperTextEnabled="true"
        app:helperText="@string/dateFormatHelper"
        app:layout_constraintBottom_toTopOf="@+id/add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_et_wrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dob_et"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dob_et_wrapper" />

</androidx.constraintlayout.widget.ConstraintLayout>